[tool.poetry]
name = "uuid25"
version = "0.1.3"
description = "25-digit case-insensitive UUID encoding"
authors = ["LiosK <contact@mail.liosk.net>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/uuid25/python"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
mypy = "^1.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
